<resources>
    <string name="app_name">Pharmacy</string>
    <string name="profile">Профиль</string>
    <string name="home">Дом</string>
    <string name="medicine_description">Описание:</string>
    <string name="not_yet_registered_sign_up_now">Еще не зарегистрированы? Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Почта</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="sign_up">Регистрация</string>
    <string name="enter_medicine">Введите название лекарства</string>
    <string name="filter">Фильтр</string>
    <string name="text_search_medicine">Поиск лекарств</string>
    <string name="med_name">Имя</string>
    <string name="test">Test</string>
    <string name="search_history">История просмостра</string>
    <string name="history">История</string>
    <string name="favorites">Избранное</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="sign_in_main">Вход</string>
    <string name="to_sign_up">Зарегистрироваться</string>
    <string name="back">Назад</string>
    <string name="about">Справка</string>
    <string name="name">Нилов Владимир Владимирович</string>
    <string name="group">ИКБО–06–22</string>
    <string name="year">2024</string>
    <string name="addos123_yandex_ru">addos123@yandex.ru</string>
    <string name="about_author">Об авторе</string>
    <string name="app_description">
    Наше приложение позволяет: \n\n
    • Находить нужные лекарства: Просматривайте информацию о каждом препарате (описание, дозировка и тд)\n\n
    • Использовать удобные фильтры: Быстро находите нужные лекарства по типам, дозировке и другим параметрам\n\n
    • Регистрируйтесь для получения доступа к расширенным функциям приложения: сохранение истории просмотров, изменение списка избранных препаратов и настройка шрифта приложения\n\n
    • Сохранять историю просмотров (В аккаунте): Легко возвращайтесь к ранее просмотренным препаратам\n\n
    • Создавать список избранного (В аккаунте): Сохраняйте часто используемые лекарства в удобном списке для быстрого доступа\n\n
    • Изменять шрифт приложения (В аккаунте): Уменьшайте или увеличивайте размер шрифта\n
    </string>
    <string name="put_filter">Применить фильтр</string>
    <string name="interaction">Взаимодействие</string>
    <string name="side_effects">Побочные эффекты</string>
    <string name="dosage">Дозировка</string>
    <string name="input_interactions">Как лекарство взамодейсвтвует с другим</string>
    <string name="input_side_effects">Введите побочные эффекты</string>
    <string name="input_dosage">Введите дозировку в мг или шт</string>
    <string name="filters">Фильтры для лекарств</string>
    <string name="type">Тип:</string>
    <string name="clear_filters">Сбросить фильтры</string>
    <string name="resources">Ресурсы</string>
    <string name="map_resources">Условия использования Яндекс.Карт</string>
    <string name="map_link">https://yandex.ru/legal/maps_termsofuse/</string>
    <string name="resources_info">Справочные ресурсы</string>
    <string name="app_name_main">Моя Аптека</string>
    <string name="description_info_medicine">В этом разделе вы можете найти информацию о лекарствах, их описание, состав, побочные эффекты и прочее. Также вы можете добавить понравившееся лекарство в избранное или просмотреть информацию о нем подробнее</string>
    <string name="title_info_medicine">Cписок лекарств</string>
    <string name="title_info_map">Карта аптек</string>
    <string name="description_info_map">На этой карте отображены аптеки в наблюдаемом районе. Вы можете приблизить или отдалить карту, чтобы найти нужную вам аптеку</string>
    <string name="title_info_favorites">Избранные лекарства</string>
    <string name="description_info_favorites">В этом разделе вы можете сохранить понравившиеся лекарства для быстрого доступа к их информации</string>
    <string name="title_info_history">Описание истории лекарств</string>
    <string name="description_info_history">В этом разделе вы можете увидеть список просмотренных вами лекарств</string>
    <string name="change_email">Изменить почту</string>
    <string name="change_name">Изменить имя пользователя</string>
    <string name="change_font">Изменить размер шрифта</string>
    <string name="input_name">Введите имя</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="small">Маленький</string>
    <string name="medium">Средний</string>
    <string name="large">Большой</string>
</resources>