<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/usual">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            android:text="@string/type" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbarDefaultDelayBeforeFade="@integer/material_motion_duration_long_2"
            android:scrollbars="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/typeChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="false" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            android:hint="@string/input_dosage"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sideEffects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            android:hint="@string/input_side_effects"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSideEffects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputInteraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_interactions"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            android:text="@string/put_filter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual"
            android:text="@string/clear_filters" />

    </LinearLayout>
</ScrollView>