<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/black_border"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/usual">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_main"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="36sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usual"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@color/purple_500"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/usual"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/purple_500"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialIconButtonFilledStyle"
                android:id="@+id/loginButton"
                app:icon="@drawable/ic_login"
                app:iconPadding="@dimen/usual"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/usual"
                android:backgroundTint="@color/purple_200"
                android:text="@string/sign_in"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        android:text="@string/not_yet_registered_sign_up_now"/>

</LinearLayout>